<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/grey"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/target_starter"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/starter_targets"
                app:layout_constraintEnd_toStartOf="@+id/count_targets"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardTemplateTitle" />

            <TextView
                android:id="@+id/count_targets"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/target_starter"
                app:layout_constraintTop_toBottomOf="@+id/cardTemplateTitle"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/starter_template"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:text="@string/starter_targets"
                app:layout_constraintEnd_toStartOf="@+id/count_templates"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/target_starter" />

            <TextView
                android:id="@+id/count_templates"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toEndOf="@+id/starter_template"
                app:layout_constraintTop_toBottomOf="@+id/count_targets"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/starter_runs"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:text="@string/starter_runs"
                app:layout_constraintEnd_toStartOf="@+id/count_runs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starter_template" />

            <TextView
                android:id="@+id/count_runs"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/starter_runs"
                app:layout_constraintTop_toBottomOf="@+id/count_templates"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/starter_findings"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:text="@string/starter_findings"
                app:layout_constraintEnd_toStartOf="@+id/count_findings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starter_runs" />

            <TextView
                android:id="@+id/count_findings"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/starter_findings"
                app:layout_constraintTop_toBottomOf="@+id/count_runs"
                tools:ignore="MissingConstraints" />


            <android.support.v7.widget.CardView
                android:id="@+id/cardTemplateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/orangeLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewFinding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/starter_metrics"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/add_target_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/orange"
        android:text="@string/add_target_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</android.support.constraint.ConstraintLayout>